ACademy Clean theme: Fixed iStart24 weekly dashboard icons wrapping onto two lines in  Moodle 2.7.

--- a/theme/academy_clean/style/istart.css
+++ b/theme/academy_clean/style/istart.css
@@ -107,7 +107,8 @@
 li.section.main.istart-week-task {
     float: left;
     width: 25%;
-    padding-top: 2em;
+    padding: 2em 0 0 0;
+    margin: 0 0 5px 0;
 }
 @media (min-width: 980px) {
     .format-flexsections .course-content ul.flexsections.flexsections-level-1
@@ -119,6 +120,8 @@ li.section.main.istart-week-task {
 li.section.main.istart-week-task {
     float: none;
     width: inherit;
+    padding-top: 0;
+    padding-left: 5px;
 }
 .istart-week-task h3 a {
     background-position: left 32px;
